fix: remove turnFaceUp from deal, add three-bus check on refill, add discard pile with reshuffle